# crusty-rustacean-newsletter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Secrets.toml  Shuttle.toml  justfile  progress.md  rustfmt.toml  spec.yaml
.circleci/: config.yml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
cr-api/: .env  Cargo.toml  sqlx-data.json
cr-api-local/: .env  Cargo.toml  configuration.yaml  sqlx-data.json
cr-api-local/scripts/: init_db.sh
cr-api-local/src/lib/: configuration.rs  startup.rs
cr-api-local/src/lib/routes/: health_check.rs  mod.rs  subscriptions.rs
cr-api-local/tests/: health_check.rs
cr-api/.github/workflows/: general.yml
cr-api/.sqlx/: query-06e5edd8952eba1cf83f4113c4b05a3ad8689c39b704d554f41c90f8e8ea4137.json  query-13e7a2b2ba74e95ba9a406a90b9c163f59490a629957b60fa888af276f6d5a78.json  query-38ba903ad605b1dcbbae874b3bda0833c360ea3a31a7944a49aaab37cf3799aa.json  query-60fc43e679fa87b18406d91d178b4528792877994c84a7fe182e9d7584fbfd15.json  query-68c6c467a0c76b3f7b0ff948e873753b2c3449cde08ac5957cae85e4c7c814ce.json  query-794c0ce1ab5e766961132366163df7a7183ae7985228bf585700250deb38b726.json  query-7b1ed6e53f00d02897e0fb4e357e47bd26b42f36d65d1895b3d2a9118cd32fb9.json  query-876c916dc0bdf9bf977b2ce083a739f4e75cfb0931419e6544115b48f85a6208.json  query-8a9e444364279d44e1bd0409d626db90880f87c36c1c205706124fee72e12502.json  query-9bfa261067713ca31b191c9f9bcf19ae0dd2d12a570ce06e8e2abd72c5d7b42d.json  query-f835e8ebdcd687acf7fcf845127617860abd3d7a806a900aa6d608c993dabb0b.json
cr-api/assets/: cr-api.css
cr-api/configuration/: base.toml  base.yaml  local.toml  production.toml  production.yaml
cr-api/migrations/: 20230225210742_create_subscriptions_table.sql  20230410145007_make_status_not_null_in_subscriptions.sql  20230410150216_create_subscriptions_tokens_table.sql  20230430040751_create_users_table.sql  20230505030426_rename_password_column.sql  20230507034812_add_salt_to_users.sql  20230512030428_remove_salt_from_users.sql  20230620131609_seed_user.sql  20230705035337_create_idempotency_table.sql  20230708223218_relax_null_checks_on_idempotency.sql  20230709014109_create_newsletter_issues_table.sql  20230709020552_create_issue_delivery_queue_table.sql
cr-api/scripts/: init_db.sh  init_redis.sh
cr-api/src/assets/: cr-api.css  cr-api.js
cr-api/src/lib/: authentication.rs  configuration.rs  domain.rs  email_client.rs  errors.rs  idempotency_cleanup_worker.rs  issue_delivery_worker.rs  lib.rs  routes.rs  session_state.rs  startup.rs  state.rs  telemetry.rs
cr-api/src/lib/authentication/: middleware.rs  mod.rs  password.rs
cr-api/src/lib/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  templates.rs
cr-api/src/lib/idempotency/: key.rs  mod.rs  persistence.rs
cr-api/src/lib/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
cr-api/src/lib/routes/admin/: dashboard.rs  logout.rs  mod.rs
cr-api/src/lib/routes/admin/newsletter/: get.rs  mod.rs  post.rs
cr-api/src/lib/routes/admin/password/: get.rs  mod.rs  post.rs
cr-api/src/lib/routes/home/: home.html  mod.rs
cr-api/src/lib/routes/login/: get.rs  login.html  mod.rs  post.rs
cr-api/templates/: admin_dashboard.html  base.html  change_password_form.html  home.html  login.html  pending_subscription.html  publish_newsletter_form.html  subscription_confirmed.html
cr-api/tests/: health_check.rs
cr-api/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
project-init/: Cargo.toml
project-init/src/: main.rs
shuttle-build/: Cargo.toml
shuttle-build/src/: main.rs
src/: lib.rs  main.rs
src/lib/: lib.rs
tests/: health_check.rs
