[package]
name = "cr-api-shuttle"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
  ".",
  "cr-api-local",
  "project-init"
]

default-members = [
  ".",
]

[lib]

[dependencies]
axum = "0.6.8"
cr-api-local = { path = "cr-api-local" }
shuttle-service = { version = "0.11.0", features = ["web-axum"] }
shuttle-shared-db = { version = "0.11.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
sync_wrapper = "0.1"
tracing = "0.1.37"