[package]
name = "cr-api-shuttle"
version = "0.8.2"
edition = "2021"
description = "API for the Crusty Rustacean Blog"
readme = "README.md"
authors = [ "Jeffery D. Mitchell", "<sentinel1909@protonmail.com>" ]
repository = "https://github.com/sentinel1909/crusty-rustacean-api"
license = "MIT"
keywords = ["axum, shuttle"]
categories = ["api"]
publish = false

[workspace]
members = [
  ".",
  "cr-api",
  "project-init"
]

default-members = [
  ".",
]

[dependencies]
axum = "0.6.15"
cr-api-docker = { path = "cr-api" }
shuttle-axum = { version = "0.14.0" }
shuttle-runtime = { version = "0.14.0" }
shuttle-shared-db = { version = "0.14.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.26.0" }
tracing = "0.1.37"