[package]
name = "cr-api-docker"
version = "0.9.0"
authors = ["Jeffery D. Mitchell", "<sentinel1909@protonmail.com>"]
edition = "2021"
description = "API for the Crusty Rustacean Blog"
readme = "README.md"
repository = "https://github.com/sentinel1909/crusty-rustacean-api"
license = "MIT"
keywords = ["axum, shuttle"]
categories = ["api"]

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "cr_api_docker"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6.15", features = [ "form", "macros" ] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.3"
env_logger = "0.10.0" 
hyper = "0.14.24"
once_cell = "1.17.1"
reqwest = { version = "0.11.14", default-features = false, features = [ "json", "rustls-tls" ]}
secrecy = { version = "0.8", features = [ "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
rand = { version = "0.8", features = [ "std_rng" ]}
thiserror = "1"
tokio = { version = "1.26.0", features = [ "macros", "rt-multi-thread" ]}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = [ "trace", "request-id", "util" ] }
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [ "registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
linkify = "0.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = [ "rt", "macros"] }
wiremock = "0.5"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
  "runtime-tokio-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]
