[package]
name = "cr-api"
version = "0.11.13"
authors = ["Jeffery D. Mitchell", "<sentinel1909@protonmail.com>"]
edition = "2021"
description = "API for the Crusty Rustacean Blog"
readme = "README.md"
repository = "https://github.com/sentinel1909/crusty-rustacean-api"
license = "MIT"
keywords = ["axum, docker"]
categories = ["api"]

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "cr-api"
path = "src/bin/httpd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.1", features = ["std"] }
askama = { version = "0.12.0", default-features = false, features = [ "with-axum" ] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = [ "form", "headers", "macros" ] }
axum-flash = "0.7.0"
axum-extra = "0.7.4"
axum-macros = "0.3.7"
axum_session = {version = "0.3.4", features = [ "redis-db" ], default-features = false }
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13.3"
http = "0.2.9"
hyper = "0.14.24"
once_cell = "1.17.1"
rand = { version = "0.8", features = [ "std_rng" ]}
redis = { version = "0.23.0", features = [ "tokio-comp" ]}
reqwest = { version = "0.11.14", default-features = false, features = [ "json", "rustls-tls", "cookies" ]}
secrecy = { version = "0.8", features = [ "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6.3", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate", "offline" ]}
thiserror = "1"
tokio = { version = "1.26.0", features = [ "macros", "rt-multi-thread" ]}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = [ "trace", "request-id", "util", "fs" ] }
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [ "registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = [ "derive" ] }

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
linkify = "0.9.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1"
tokio = { version = "1", features = [ "rt", "macros"] }
wiremock = "0.5"
