[package]
name = "cr-api"
version = "2.12.25"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
edition = "2021"
description = "API for the Crusty Rustacean Blog"
readme = "README.md"
repository = "https://github.com/sentinel1909/crusty-rustacean-api"
license = "MIT"
keywords = ["axum, docker"]
categories = ["web-programming", "network-programming"]
[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "cr-api"
path = "src/bin/httpd.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = { version = "0.5.1", features = ["std"] }
askama = { version = "0.12.0", default-features = false, features = [ "with-axum" ] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = [ "form", "macros" ] }
axum-flash = "0.8.0"
axum-extra = "0.9.0"
axum-macros = "0.4.0"
axum_session = "0.14.0"
axum_session_redispool = "0.1.0"
base64 = "0.22"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.0"
http = "1.0.0"
hyper = "1.3.1"
once_cell = "1.13.0"
rand = { version = "0.8", features = [ "std_rng" ]}
redis = { version = "0.25.2", features = [ "tokio-comp" ]}
redis_pool = "0.4.0"
reqwest = { version = "0.12.2", default-features = false, features = [ "json", "rustls-tls", "cookies" ]}
secrecy = { version = "0.8", features = [ "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.2", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate" ]}
thiserror = "1"
tokio = { version = "1.34.0", features = [ "macros", "rt-multi-thread" ]}
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [ "trace", "request-id", "util", "fs" ] }
tracing = { version = "0.1.37", features = [ "log" ] }
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [ "registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = [ "derive" ] }
http-body-util = "0.1.0"

[dev-dependencies]
claims = "0.7.1"
fake = "~2.3.0"
linkify = "0.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "1.0.0"
serde_json = "1"
tokio = { version = "1", features = [ "rt", "macros"] }
wiremock = "0.6"
